<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/app_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/detail_backdrop_height"
            android:theme="@style/SantaTheme"
            android:fitsSystemWindows="true">

        <com.google.android.apps.santatracker.launch.SantaCollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="@null"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax">

                <ImageView
                    android:id="@+id/villageBackground"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/village_bg_countdown"
                    android:contentDescription="@null"/>

                <ImageView
                        android:id="@+id/countdown_ornament"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ornament"
                        android:layout_marginTop="@dimen/ornament_margin_top"
                        android:scaleType="centerInside"
                        android:contentDescription="@null"/>

                <com.google.android.apps.santatracker.village.VillageView
                    android:id="@+id/villageView"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"/>

                <FrameLayout
                    android:id="@+id/santa_waving"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:layout_marginBottom="@dimen/santaMarginBottom"
                    android:layout_marginRight="@dimen/santaMarginRight"
                    android:layout_gravity="bottom|right">

                    <ImageView
                        android:id="@+id/santa_arm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/santa_arm"
                        android:layout_gravity="bottom|right"
                        android:layout_marginRight="100dp"
                        android:layout_marginBottom="30dp"/>

                    <ImageView
                        android:id="@+id/santa_body"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/santa_body"
                        android:layout_marginBottom="-60dp"
                        android:layout_gravity="bottom|right"/>

                </FrameLayout>

                <com.google.android.apps.santatracker.village.SnowFlakeView
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/snowFlakeView"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/counter_margin_top"
                    android:layout_gravity="center_horizontal|top"
                    android:clickable="false">

                    <ImageView
                        android:id="@+id/google_logo_main"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="-15dp"
                        android:src="@drawable/google_logo" />

                    <ImageView
                        android:id="@+id/st_logo_main"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/google_logo_main"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/santatracker_logo_startup" />

                    <Button
                        android:id="@+id/launch_button"
                        android:theme="@style/RedButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/st_logo_main"
                        android:layout_centerHorizontal="true"
                        android:textStyle="bold"
                        android:padding="@dimen/button_side_padding"
                        android:text="@string/track_santa"
                        android:visibility="visible"
                        tools:visibility="gone" />

                    <RelativeLayout android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_below="@+id/st_logo_main"
                                    android:id="@+id/countdown_container"
                                    android:visibility="gone"
                                    tools:visibility="visible">

                        <FrameLayout
                            android:id="@+id/countdown_numbers_container"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp">

                            <include layout="@layout/layout_countdown_2015" />

                        </FrameLayout>

                        <android.support.v7.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/countdown_numbers_container"
                            android:layout_centerHorizontal="true"
                            android:contentDescription="@string/until_takeoff"
                            android:text="@string/until_takeoff"
                            android:textColor="@color/SantaWhite"
                            android:textStyle="bold"
                            android:textSize="20sp"
                            app:textAllCaps="true"/>

                    </RelativeLayout>

                </RelativeLayout>

                <TextView
                        android:id="@+id/statusText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|center_horizontal"
                        android:background="@color/translucentLightBackground"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/contacting_santa"
                        android:contentDescription="@string/contacting_santa"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/SantaBlueDark"
                        android:visibility="gone" />

                <!-- This must stay at bottom -->
                <View
                    android:id="@+id/view_color_overlay"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/villageToolbarLight"
                    android:alpha="0"
                    tools:visibility="gone"/>
            </FrameLayout>

            <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:alpha="1.0"
                    app:layout_collapseMode="pin"
                    android:theme="@style/SantaTheme"
                    app:popupTheme="@style/SantaTheme"
                    app:statusBarScrim="@color/villageToolbarLight">

                <FrameLayout
                    android:id="@+id/toolbar_content"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:alpha="0.0"
                    tools:alpha="0.5">

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:padding="5dp"
                        android:scaleType="centerInside"
                        android:src="@drawable/santatracker_logo_startup" />

                </FrameLayout>

            </android.support.v7.widget.Toolbar>

        </com.google.android.apps.santatracker.launch.SantaCollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v7.widget.RecyclerView
            android:id="@+id/markers"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_leaderboard"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        tools:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom|start"
        app:backgroundTint="#A363B6"
        android:src="@drawable/games_fab_leaderboards"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:visibility="gone"
        android:clickable="true"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_achievement"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="end|center_vertical"
        tools:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom|start"
        app:backgroundTint="#FFD600"
        android:src="@drawable/games_fab_achievements"
        android:layout_marginStart="76dp"
        android:layout_marginLeft="76dp"
        android:visibility="gone"
        android:clickable="true"/>

</android.support.design.widget.CoordinatorLayout>
